# qt_client_server_test

./: .clang-format  .cproject  .gitignore  .project  CMakeLists.txt  README.md  client.cpp  client_message.h  client_view_model.cpp  client_view_model.h  client_window.cpp  client_window.h  compile_commands.json  server.cpp  server_app.cpp  server_app.h  user_record.cpp  user_record.h
.cache/clangd/index/: client.cpp.CFDAAB662C6B5BBF.idx  client_message.h.3F7ADC398AFDDE22.idx  client_view_model.cpp.D6AD914AB9C1B90F.idx  client_view_model.h.DB74FD8260B1F0BF.idx  client_window.cpp.831CFDB4289962C5.idx  client_window.h.6FBEDAB3B17273A0.idx  listener.cpp.904F0A28D424AFB6.idx  listener.h.2F088778690630E7.idx  server.cpp.27FCADF7095DD3F5.idx  server_app.cpp.937BF60ED5ACA342.idx  server_app.h.36BBCBD196CBC1F9.idx  user_record.cpp.27AE60E1F91172CB.idx  user_record.h.CF046C86082769DA.idx  worker.cpp.2552F4F7A187DC4A.idx  worker.h.A4C6900AA901B53B.idx
